# brekz

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  conversations.rs  messages.rs  mod.rs  models.rs  settings.rs
src-tauri/src/db/: init.rs  mod.rs  queries.rs
src-tauri/src/openrouter/: client.rs  types.rs
src/components/: ErrorBoundary.tsx
src/components/Chat/: ChatView.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  ModelSelector.tsx
src/components/Settings/: ApiKeySection.tsx  ModelDefaults.tsx  SettingsModal.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/UI/: Dialog.tsx  Select.tsx
src/hooks/: useConversations.ts  useModels.ts  useStreamingChat.ts
src/lib/: visionModels.ts
src/stores/: chatStore.ts  modelStore.ts  settingsStore.ts  uiStore.ts
src/types/: chat.ts  settings.ts
